force-app/main/default/objects/CC_Deeplink__c/CC_Deeplink__c.object-meta.xml
<CustomObject>
    <label>Deeplink</label>
    <nameField>
        <displayFormat>CCDL-{00000}</displayFormat>
        <label>Deeplink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deeplink</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>