force-app/main/default/objects/CC_Deeplink__c/fields/CC_Deeplink__c.field-meta.xml
<CustomField>
    <fullName>CC_Deeplink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deeplink</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>