force-app/main/default/objects/CC_Deeplink__c/fields/CC_Sobretitulo_Ing__c.field-meta.xml
<CustomField>
    <fullName>CC_Sobretitulo_Ing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobretítulo Inglés</label>
    <length>250</length>
    <type>Text</type>
</CustomField>