force-app/main/default/objects/CC_Deeplink__c/fields/CC_Texto_Bot_Cas__c.field-meta.xml
<CustomField>
    <fullName>CC_Texto_Bot_Cas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto Botón Castellano</label>
    <length>250</length>
    <type>Text</type>
</CustomField>