force-app/main/default/objects/CC_Deeplink__c/fields/CC_TextoPrivado_Cas__c.field-meta.xml
<CustomField>
    <fullName>CC_TextoPrivado_Cas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto privado Castellano</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>