force-app/main/default/objects/CC_Deeplink__c/fields/CC_TextoPublico_Ing__c.field-meta.xml
<CustomField>
    <fullName>CC_TextoPublico_Ing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto público Inglés</label>
    <type>TextArea</type>
</CustomField>