force-app/main/default/objects/CC_Deeplink__c/fields/CC_Titulo_Cas__c.field-meta.xml
<CustomField>
    <fullName>CC_Titulo_Cas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Título Castellano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>