force-app/main/default/objects/CC_Deeplink__c/fields/CC_TituloConsentimientoCliente__c.field-meta.xml
<CustomField>
    <fullName>CC_TituloConsentimientoCliente__c</fullName>
    <description>Se muestra al realizar la operativa</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Título consentimiento cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>